# automation-test

./: .gitignore
.github/: copilot-instructions.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
docs/: pre-training-level-1.md  trainee-assessment-form.md  trainee-assessment.md  training-plan-level-1.md  training-plan-level-2.md  training-plan-level-3.md  training-plan-personalized.md
git-training/: README.md  module-01-setup-basics.md  module-02-branching-collaboration.md  module-03-pr-conflicts.md  module-04-advanced-tools.md
mock-project/: .gitignore  Makefile  README.md  docker-compose.yml
mock-project/backend/: .env.example  Dockerfile  init.sql  pyproject.toml
mock-project/e2e/: .env  README.md  conftest.py  pyproject.toml
mock-project/e2e/pages/: __init__.py  base_page.py  inventory_page.py  login_page.py  orders_page.py  products_page.py
mock-project/e2e/tests/: test_auth.py  test_inventory.py  test_navigation.py  test_orders.py  test_products.py
mock-project/e2e/utils/: __init__.py  helpers.py
mock-project/frontend/: .env  .env.example  Dockerfile  Dockerfile.dev  next.config.js  package.json  pnpm-lock.yaml
training-plan/: 00-environment-setup.md  99-resources.md  README.md
training-plan/week-1/: day-01-variables.md  day-02-control-flow.md  day-03-functions.md  day-04-collections.md  day-05-project.md
training-plan/week-2/: day-06-pytest-intro.md  day-07-fixtures.md  (+3 more)
(+37 files in other folders)
